fixed control visibility

--- a/components/gameComponent.css
+++ b/components/gameComponent.css
@@ -141,7 +141,6 @@ z-game .controlContainer {
     left: 50%;
     transform: translateX(-50%);
     width: 80%;
-    display: flex;
     flex-direction: column;
     justify-content: space-between;
 
